--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
   }
